--- a/Documentacion/package.json
+++ b/Documentacion/package.json
@@ -2,7 +2,7 @@
   "name": "Documentacion",
   "version": "1.0.0",
   "description": "",
-  "main": "aritmetica.js",
+  "main": "modulos.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "docs": "jsdoc -c jsdoc.json"
